refactored css to prevent overlapping class names

--- a/src/assets/globals.css
+++ b/src/assets/globals.css
@@ -60,7 +60,7 @@
 }
 
 @layer utilities {
-  .container {
+  .max-width {
     @apply max-w-7xl mx-auto px-6;
   }
 
